--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>hi!!!</h1>
+    <h2>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores dolorum accusantium provident. Perferendis, asperiores dicta! Sequi, tenetur quam eum voluptate impedit dolore qui doloremque, nesciunt deserunt eos ab labore non.</h2>
 </body>
 </html>
